[package]
name = "rnl-core"
version = "0.1.0"
edition = "2021"
description = "Core runtime for RNL (React Native Libre)"
authors = ["Mainasara Tsowa <mainasara@neutrino.dev>"]
license = "MIT"

[lib]
name = "rnl"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rnl-headless"
path = "src/bin/headless.rs"

[dependencies]
# Using prebuilt bindings to avoid libclang dependency
rquickjs = { version = "0.7", features = ["parallel", "allocator", "full-async", "macro"] }
tokio = { version = "1.45", features = ["rt", "sync", "macros"] }
once_cell = "1.21"
parking_lot = "0.12"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
tempfile = "3.10"
